// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker should render 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`ColorPicker should render error 1`] = `
<label
  class="input default error"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`ColorPicker should render error when invalid value is set 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`ColorPicker should render error when invalid value is set 2`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`ColorPicker should render null value as empty string 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`ColorPicker should render with open overlay 1`] = `
"<div>
  <div class=\\"backdrop fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; position: fixed; pointer-events: auto; left: 35px;\\">
      <div style=\\"width: 200px; padding: 10px 10px 0px; box-sizing: initial; background: rgb(255, 255, 255); border-radius: 4px; box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);\\" class=\\"sketch-picker \\">
        <div style=\\"width: 100%; padding-bottom: 75%; position: relative; overflow: hidden;\\">
          <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;\\">
            <style>
              .saturation-white {
                background: -webkit-linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
                background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
              }

              .saturation-black {
                background: -webkit-linear-gradient(to top, #000, rgba(0, 0, 0, 0));
                background: linear-gradient(to top, #000, rgba(0, 0, 0, 0));
              }
            </style>
            <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;\\" class=\\"saturation-white\\">
              <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;\\" class=\\"saturation-black\\"></div>
              <div style=\\"position: absolute; top: 70%; left: 66.66666666666667%; cursor: default;\\">
                <div style=\\"width: 4px; height: 4px; box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4); border-radius: 50%; cursor: hand;\\"></div>
              </div>
            </div>
          </div>
        </div>
        <div style=\\"display: flex;\\" class=\\"flexbox-fix\\">
          <div style=\\"padding: 4px 0px;\\">
            <div style=\\"position: relative; height: 10px; overflow: hidden;\\">
              <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;\\">
                <div class=\\"hue-horizontal\\" style=\\"padding: 0px 2px; position: relative; height: 100%;\\">
                  <style>
                    .hue-horizontal {
                      background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                      background: -webkit-linear-gradient(to right, #f00 0%, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                    }

                    .hue-vertical {
                      background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                      background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
                    }
                  </style>
                  <div style=\\"position: absolute; left: 69.44444444444443%;\\">
                    <div style=\\"margin-top: 1px; width: 4px; border-radius: 1px; height: 8px; box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255);\\"></div>
                  </div>
                </div>
              </div>
            </div>
            <div style=\\"position: relative; height: 10px; margin-top: 4px; overflow: hidden; display: none;\\">
              <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;\\">
                <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden;\\">
                  <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url() left;\\"></div>
                </div>
                <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;\\"></div>
                <div style=\\"position: relative; height: 100%; margin: 0px 3px;\\">
                  <div style=\\"position: absolute; left: 100%;\\">
                    <div style=\\"width: 4px; border-radius: 1px; height: 8px; box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); margin-top: 1px;\\"></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div style=\\"width: 24px; height: 10px; position: relative; margin-top: 4px; margin-left: 4px; border-radius: 3px;\\">
            <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url() left;\\"></div>
            <div style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; border-radius: 2px; background: rgb(34, 25, 77); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);\\"></div>
          </div>
        </div>
        <div style=\\"display: flex; padding-top: 4px;\\" class=\\"flexbox-fix\\">
          <div>
            <div style=\\"position: relative;\\">
              <input style=\\"width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;\\" spellcheck=\\"false\\" value=\\"22194D\\"><span style=\\"display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;\\">hex</span></div>
          </div>
          <div style=\\"padding-left: 6px;\\">
            <div style=\\"position: relative;\\">
              <input style=\\"width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;\\" spellcheck=\\"false\\" value=\\"34\\"><span style=\\"display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;\\">r</span></div>
          </div>
          <div style=\\"padding-left: 6px;\\">
            <div style=\\"position: relative;\\">
              <input style=\\"width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;\\" spellcheck=\\"false\\" value=\\"25\\"><span style=\\"display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;\\">g</span></div>
          </div>
          <div style=\\"padding-left: 6px;\\">
            <div style=\\"position: relative;\\">
              <input style=\\"width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;\\" spellcheck=\\"false\\" value=\\"77\\"><span style=\\"display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;\\">b</span></div>
          </div>
          <div style=\\"padding-left: 6px; display: none;\\">
            <div style=\\"position: relative;\\">
              <input style=\\"width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;\\" spellcheck=\\"false\\" value=\\"100\\"><span style=\\"display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;\\">a</span></div>
          </div>
        </div>
        <div style=\\"margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid #eee; display: none; position: relative;\\" class=\\"flexbox-fix\\"></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ColorPicker should render with placeholder 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    placeholder="My placeholder"
    type="text"
    value=""
  />
</label>
`;

exports[`ColorPicker should render with value 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-square"
      class="icon default icon iconClickable su-square clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;
